css fix (border-bottom when collapsed) for second last event

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -81,6 +81,9 @@ nav a {
   width: 100%;
 }
 
+#eventbox > div:last-child > div:nth-last-child(2){
+  border-bottom:1px solid rgb(86, 95, 97);
+}
 
 }
 
